[tool.poetry]
name = "adventofcode-com"
version = "0.1.0"
description = "You know what is beautiful? Effort."
authors = ["Alexander Ilyin <alexander@ilyin.eu>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "adventofcode"}]

[tool.poetry.scripts]
ad = 'adventofcode.commands:cli'

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
pytest = "^7.4.3"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
